crates/wac-parser/tests/resolution/fail/export-conflict-type.wac
package test:comp;

import f as "x": func();

record x {
    a: u32
}

export f as "x";
